hphp/test/quick/parse_fail_type_constraint.php.expectf
HipHop Fatal error: syntax error, unexpected T_AS, expecting '=' in %s on line 4
